doop-central/static/style.css
/*******************************************************************************
 * overall document structure
 */

html {
  font-family: system-ui, sans-serif;
  font-size: 16px;
  background: white url(/static/logo.svg) no-repeat fixed;
  background-size: 30%;
  background-position: bottom 1rem right 1rem;
}

/*******************************************************************************
 * header
 */

main {
  padding-top: 3rem; /* to accommodate the fixed <header> */
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 3rem;
  background: #EEE;
  display: flex;
  white-space: nowrap;
  box-shadow: 0 0 5px #333;
}

header h1 {
  flex: 0;
  margin: 0 0.5rem;
  font-size: 1.75rem;
  line-height: 3rem;
}

header h1 small a {
  opacity: 0.3;
  font-size: 0.7rem;
  color: blue !important;
  text-decoration: none !important;
}

header h1 small a:hover {
  opacity: 1.0;
}

header input[type=text] {
  flex: 1;
  min-width: 5rem;
  max-width: 20rem;
  background: white;
  margin: 0.6rem 0.25rem;
  border: 1px solid #999;
  border-radius: 0.25rem;
  padding: 0 0.25rem;
  font-size: 1.2rem;
}

header div.buttons {
  display: flex;
  vertical-align: middle;
  margin: 0.6rem 0.25rem;
  box-shadow: 0 0 3px #CCC;
}
header div.buttons button {
  padding: 0 0.5rem;
  border: 1px solid #999;
  font-family: inherit;
  font-weight: normal;
  font-size: 1.2rem;
  line-height: calc(1.8rem - 1px);
  cursor: pointer;
}
header div.buttons button:focus, header div.buttons button:hover {
  border-color: #666;
  z-index: 10;
}
header div.buttons button.selected {
  background: white;
  font-weight: bold;
}
header div.buttons *:first-child {
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}
header div.buttons *:last-child {
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
}
header div.buttons * + * {
  margin-left: -1px;
}

/*******************************************************************************
 * docstrings
 */

blockquote {
  max-width: 60rem;
  margin: 0.5rem;
  border-left: 2px solid #66C;
  padding: 0.5rem;
  background: #EEF;
}
blockquote > :first-child {
  margin-top: 0 !important;
}
blockquote > :last-child {
  margin-bottom: 0 !important;
}

blockquote pre {
  margin-left: 1rem;
}

blockquote dl {
  margin-bottom: 1rem;
}
blockquote dt {
  font-weight: bold;
}
blockquote dd {
  margin-left: 0.5rem;
  margin: 0.25rem 0 0 1rem;
}
blockquote dd:not(:last-child) {
  margin-bottom: 1rem;
}

/*******************************************************************************
 * violation report
 */

ul.violations {
  padding-left: 0.5rem;
  list-style: none;
}

ul.violations li div.violation-instances {
  margin: 0.5rem 0 1rem 1rem;
  font-size: 0.8rem;
  color: #333;
}

.hidden {
  display: none;
}

ul.violations li div.violation-instances:not(.folded) div.unfolder {
  display: none;
}
ul.violations li div.violation-instances.folded div.violation-instance {
  display: none;
}

/*******************************************************************************
 * table styling
 */

.nobr {
  white-space: nowrap;
}
.center {
  text-align: center;
}

table {
  border: 0;
  border-collapse: collapse;
  background: rgba(255, 255, 255, 0.9);
  overflow-x: auto;
}

table td, table th {
  border: 1px solid #AAA;
  padding: 0.5rem;
}

table td.value-ok {
  background-color: #EFE;
}
table td.value-warning {
  background-color: #FFE;
}
table td.value-danger {
  background-color: #FEE;
}

/*******************************************************************************
 * foldable sections
 */

section > h2 {
  cursor: pointer;
}
section > h2:hover {
  background: #EEE;
}

section > h2:before {
  content: '\2B9F';
  display: inline;
  padding-right: 0.5rem;
}

section.folded > h2:before {
  content: '\2B9E';
}

section.folded > :not(h2) {
  display: none;
}

